force-app/main/default/objects/Optional_Products_Quote__c/Optional_Products_Quote__c.object-meta.xml
<CustomObject>
    <description>Optional Products for Quotes.</description>
    <label>Optional Products Quote</label>
    <nameField>
        <displayFormat>OPQ-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Optional Products Quote</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>