force-app/main/default/objects/Optional_Products_Quote__c/fields/AlternateImageURL__c.field-meta.xml
<CustomField>
    <fullName>AlternateImageURL__c</fullName>
    <label>Alternate Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>