force-app/main/default/objects/Optional_Products_Quote__c/fields/AlternateImageURL_Trunc__c.field-meta.xml
<CustomField>
    <fullName>AlternateImageURL_Trunc__c</fullName>
    <formula>IF( CONTAINS(AlternateImageURL__c, &quot;/servlet&quot;), 
		IF(ISBLANK($User.ContactId),&quot;&quot;,&quot;/sales&quot; )&amp;MID(AlternateImageURL__c, FIND( &apos;/servlet&apos;, AlternateImageURL__c), 
																																																(LEN(AlternateImageURL__c) - FIND( &apos;/servlet&apos;, AlternateImageURL__c) +1)),
		AlternateImageURL__c)</formula>
    <label>AlternateImageURL_Trunc</label>
    <type>Text</type>
</CustomField>