force-app/main/default/objects/Optional_Products_Quote__c/fields/List_Image__c.field-meta.xml
<CustomField>
    <fullName>List_Image__c</fullName>
    <formula>if(

LEN(AlternateImageURL_Trunc__c)!=0, IMAGE(AlternateImageURL_Trunc__c,&quot;Image&quot;,-1,164),
if(
LEN(Product__r.Product_Image_Short_URL__c)=0,&quot;&quot;, IMAGE(Product__r.Product_Image_Short_URL__c,&quot;Image&quot;, -1, 164)

)

)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>