force-app/main/default/objects/Optional_Products_Quote__c/fields/PriceBookEntryId__c.field-meta.xml
<CustomField>
    <fullName>PriceBookEntryId__c</fullName>
    <label>PriceBookEntryId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>