force-app/main/default/objects/Optional_Products_Quote__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Optional_Products_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>