force-app/main/default/objects/Optional_Products_Quote__c/fields/Product_Code_Formula__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_Formula__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>