force-app/main/default/objects/Optional_Products_Quote__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>AcctSeed__Project__c</referenceTo>
    <relationshipLabel>Optional Products Quote</relationshipLabel>
    <relationshipName>Optional_Products_QuoteProject</relationshipName>
    <type>Lookup</type>
</CustomField>