force-app/main/default/objects/Optional_Products_Quote__c/fields/Size_Error__c.field-meta.xml
<CustomField>
    <fullName>Size_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Size Error</label>
    <type>Checkbox</type>
</CustomField>