force-app/main/default/objects/Optional_Products_Quote__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <label>Sort Order</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>