force-app/main/default/objects/Optional_Products_Quote__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <formula>(UnitPrice__c - (UnitPrice__c * Discount__c)) *  Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price alongwith the discount.</inlineHelpText>
    <label>Sub Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>