force-app/main/default/objects/Optional_Products_Quote__c/validationRules/If_SalesRep_validate_the_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>If_SalesRep_validate_the_fields</fullName>
    <active>true</active>
    <description>If the profile is Sales Rep then validate the fields Quantity, UnitPrice and Description.</description>
    <errorConditionFormula>AND( 
$Profile.Name = &quot;Sales Rep&quot;, 
(ISCHANGED( Quantity__c ) || ISCHANGED( UnitPrice__c ) || ISCHANGED( Description__c )))</errorConditionFormula>
    <errorMessage>Insufficient access to Optional Products. Please contact the administrator.</errorMessage>
</ValidationRule>