force-app/main/default/objects/Optional_Products_Quote__c/validationRules/Product_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_is_required</fullName>
    <active>true</active>
    <description>Product_is_required</description>
    <errorConditionFormula>IF( ISBLANK( Product__c ), true, false)</errorConditionFormula>
    <errorMessage>Please select a product.</errorMessage>
</ValidationRule>